<resources>
    <string name="app_name">Ensibuuko Forum</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="post_fragment_label">Posts</string>
    <string name="details_fragment_label">Post Details</string>
    <string name="user_details_fragment_label">User Details</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="no_posts">No Posts Found!</string>
    <string name="add_comment">Add Comment</string>

    <string name="add_post">Add Post</string>
    <string name="save">Save Post</string>
    <string name="comment">Comment</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="saved_post">Post saved successfully</string>
    <string name="saved_comment">Comment saved successfully</string>
    <string name="profile">My Profile</string>
</resources>