<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />

        <variable
            name="sentSuccessful"
            type="Boolean" />
        <variable
            name="loading"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="@dimen/dimen_24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/close"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_close_grey_24dp" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/close"
            android:visibility="@{(sentSuccessful || loading) ? View.GONE : View.VISIBLE}">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_add_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dimen_10dp"
                    android:text="@string/add_comment"
                    android:textSize="@dimen/text_18sp"
                    android:fontFamily="@font/gilroy_semi_bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/body_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:background="@drawable/txt_field_bg"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@+id/tv_add_comment"
                    tools:layout_editor_absoluteX="24dp">

                    <EditText
                        android:id="@+id/body"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:hint="@string/body"
                        android:minLines="5"
                        android:paddingStart="@dimen/dimen_15dp"
                        android:paddingEnd="@dimen/dimen_5dp"
                        android:textColor="#838383"
                        android:textSize="16sp"
                        tools:ignore="Autofill" />
                </LinearLayout>

                <ProgressBar
                    android:id="@+id/loader"
                    android:layout_width="@dimen/dimen_30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:visibility="@{loading ? View.VISIBLE : View.GONE}"
                    tools:visibility="gone" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/send_comment_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:text="@string/comment"
                    android:textColor="@color/purple_500"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:fontFamily="@font/gilroy_bold" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="@{sentSuccessful ? View.VISIBLE : View.GONE}"
            tools:visibility="gone"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/close">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="@dimen/dimen_50dp"
                android:layout_height="@dimen/dimen_50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_progress_check" />

            <TextView
                android:id="@+id/success_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_16sp"
                android:text="@string/saved_comment"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView4" />
            <Button
                android:id="@+id/close_btn"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:text="Close"
                android:textColor="@color/purple_500"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                tools:layout_editor_absoluteX="24dp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>